--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "busboy": "^1.6.0",
     "dotenv": "^17.2.3",
     "mysql2": "^3.16.0"
   },
